<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="playing">Now Playing:</string>
    <string name="inital_Time">0 min, 0 sec</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>

</resources>